--- a/Muckingaroundchloropleth.ipynb
+++ b/Muckingaroundchloropleth.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,15 +36,15 @@
     "#that's a point actually, what is the difference between a json and a geojson? could that be causing an issue?\n",
     "\n",
     "df[\"Density\"] = df[\"2019 people per sq. km\"].apply(lambda x: int(x.split(\"/\")[0].replace(\",\", \"\")))#gets rid of commas in the csv data. I don't need the bit about splitting /, but I \"borrowed\" this code and it complains if I remove it\n",
-    "df[\"id\"] = df[\"Code\"].apply(lambda x: LA_id_map[x])\n",
+    "df[\"id\"] = df[\"Code\"].apply(lambda x: LA_id_map[x]) #code is an identifier for the LAs in the csv\n",
     "df[\"DensityScale\"] = np.log10(df[\"Density\"]) #putting the densities on log scale for better comparison\n",
     "\n",
     "df['Code']\n",
-    "fig = px.choropleth(df,locations=\"id\", geojson=UK_districts, color=\"DensityScale\", color_continuous_scale = \"blues\", title = )\n",
+    "fig = px.choropleth(df,locations=\"id\", geojson=UK_districts, color=\"DensityScale\", color_continuous_scale = \"blues\", title = \"Population Density UK Local Authorities\" )\n",
     "fig.update_geos(fitbounds=\"locations\", visible=False)  #reduces the scope of the produced map to just the UK. It won't load otherwise. No apparent difference between True and False\n",
     "fig.show()\n",
     "\n",
-    "# maybe try removing the Isles of Scilly"
+    "# not sure what the problem is - dodgy json? "
    ]
   },
   {
